--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -433,10 +433,13 @@ considerations.
 
 \vspace{2.0cm}
 
-\centering
+\centering\normalsize
 
-Please contact \url{nefsc.esp.leads@noaa.gov} with any questions or
-comments.
+We welcome your observations! Please contact
+\url{northeast.ecosystem.highlights@noaa.gov} with any on-the-water
+insights or changes observed in the black sea bass fishery and
+\url{nefsc.esp.leads@noaa.gov} with questions or comments on the
+information presented in this report.
 
 
 
