--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -167,7 +167,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Longfin Inshore Squid () Ecosystem \& Socioeconomic Profile (ESP) Snapshot},
+  pdftitle={Longfin Inshore Squid () Snapshot Ecosystem \& Socioeconomic Profile (ESP)},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -177,7 +177,7 @@
 
 
 \title{Longfin Inshore Squid (\protect\textit{Doryteuthis pealeii})
-\linebreak Ecosystem \& Socioeconomic Profile (ESP) Snapshot}
+\linebreak Snapshot Ecosystem \& Socioeconomic Profile (ESP)}
 \author{}
 \date{}
 
