replace research recs with uncertainty

--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -402,34 +402,61 @@ elements in 2025.
 
 \renewcommand*{\arraystretch}{1}
 
-\section{Research Recommendations}
+\section{Data Gaps/Uncertainty}
 
 \raggedright
 
--Expand ecosystem and socioeconomic indicator selection relevant to
-longfin squid stock dynamics. Potential ecosystem indicators include
-bottom salinity, sea surface temperature, warm core rings, marine
-heatwaves, storminess index, indices of food availability, and other
-oceanographic indicators relevant to shelf/slope dynamics. Potential
-socioeconomic indicators include fuel price, quotas, and ex-vessel
-price.
+\begin{itemize}
+\tightlist
+\item
+  Bottom temperature data comes from GLORYS, a modeled re-analysis
+  product not derived from in-situ data.
+\end{itemize}
 
 \vspace{0.25cm}
 
--Analyze indicators against longfin squid metrics, such as a
-standardized CPUE index.
+\begin{itemize}
+\tightlist
+\item
+  The Gulf Stream Index indicator is a yearly value and may not be
+  indicative of changes in oceanographic processes on a smaller time
+  scale.
+\end{itemize}
 
 \vspace{0.25cm}
 
--Estimate availability of longfin squid stock to fishery independent
-surveys and fishery. Through a seasonal habitat suitability
-model/species distribution model.
+\begin{itemize}
+\tightlist
+\item
+  While literature generally supports a life span around 1 year, various
+  studies and data indicate a maximum age anywhere between 6 to 15
+  months. A large range of potential maximum ages creates uncertainty
+  around life history processes, spawning timing, and natural mortality.
+\end{itemize}
 
 \vspace{0.25cm}
 
--Evaluate ecosystem and socioeconomic influences on longfin squid in
-reference to the stock assessment and fisheries management
-considerations.
+\begin{itemize}
+\tightlist
+\item
+  A hypothesis has been proposed regarding longfin squid spawning South
+  of Cape Hatteras in the winter months. While survey data in the 1970s
+  and 80s indicate larval squid in this region that are transported
+  north into the Mid-Atlantic Bight, there is a lack of definitive data
+  to prove this hypothesis. If one assumes this hypothesis is true,
+  further questions arise concerning maximum age and inputs to the
+  population from South Atlantic Bight spawning.
+\end{itemize}
+
+\vspace{0.25cm}
+
+\begin{itemize}
+\tightlist
+\item
+  Lack of a definitive maximum age of longfin squid affects calculations
+  of natural mortality. Effects of cannibalism on the population are
+  unknown at this time.
+\end{itemize}
 
 \vspace{2.0cm}
 
