--- a/docs/report_card_template.tex
+++ b/docs/report_card_template.tex
@@ -407,37 +407,18 @@ elements in 2025.
 \raggedright
 
 \begin{itemize}
-\tightlist
 \item
   Bottom temperature data comes from GLORYS, a modeled re-analysis
-  product not derived from in-situ data.
-\end{itemize}
-
-\vspace{0.25cm}
-
-\begin{itemize}
-\tightlist
+  product that incorporates insitu data.
 \item
   The Gulf Stream Index indicator is a yearly value and may not be
   indicative of changes in oceanographic processes on a smaller time
   scale.
-\end{itemize}
-
-\vspace{0.25cm}
-
-\begin{itemize}
-\tightlist
 \item
   While literature generally supports a life span around 1 year, various
   studies and data indicate a maximum age anywhere between 6 to 15
   months. A large range of potential maximum ages creates uncertainty
   around life history processes, spawning timing, and natural mortality.
-\end{itemize}
-
-\vspace{0.25cm}
-
-\begin{itemize}
-\tightlist
 \item
   A hypothesis has been proposed regarding longfin squid spawning South
   of Cape Hatteras in the winter months. While survey data in the 1970s
@@ -446,19 +427,13 @@ elements in 2025.
   to prove this hypothesis. If one assumes this hypothesis is true,
   further questions arise concerning maximum age and inputs to the
   population from South Atlantic Bight spawning.
-\end{itemize}
-
-\vspace{0.25cm}
-
-\begin{itemize}
-\tightlist
 \item
   Lack of a definitive maximum age of longfin squid affects calculations
   of natural mortality. Effects of cannibalism on the population are
   unknown at this time.
 \end{itemize}
 
-\vspace{2.0cm}
+\vspace{1.0cm}
 
 \centering\normalsize
 
@@ -466,7 +441,10 @@ We welcome your observations! Please contact
 \url{northeast.ecosystem.highlights@noaa.gov} with any on-the-water
 insights or changes observed in the black sea bass fishery and
 \url{nefsc.esp.leads@noaa.gov} with questions or comments on the
-information presented in this report.
+information presented in this report.\newline
+
+The code used to create this report can be viewed online:
+\href{github.com/NEFSC/READ-EDAB/longfinESP}{github.com/NEFSC/READ-EDAB-longfinESP}
 
 
 
