fix some life history and uncertainty text

--- a/docs/snapshot_template.tex
+++ b/docs/snapshot_template.tex
@@ -207,11 +207,11 @@
 
 \subsection{Lifespan and aging}
 
-Growth is estimated to be 1 statolith ring/day, per multiple literature
-sources. Participants at the longfin squid summit estimated a maximum
-age of 15 months. Literature review supports a lifespan of less than 1
-year. Recent (2024) statolith aging indicates maximum ages of 7 months
-for females and 8.6 months for males (right) from squid caught in the
+Some literature sources estimate growth to be 1 statolith ring/day, and
+literature review supports a lifespan of less than 1 year. Participants
+at the longfin squid summit estimated a maximum age of 15 months. 2024
+statolith aging from SQUIBS indicates maximum ages of 7 months for
+females and 8.6 months for males (right) from squid caught in the
 fishery.
 
 \vspace{0.25cm}
@@ -229,7 +229,7 @@ stage 4 females and very few stage 1 males were caught.
 
 \subsection{Migration and movement dynamics}
 
-Recent studies suggest the possibility of a winter cohort that hatches
+Recent work hypothesizes the possibility of a winter cohort that hatches
 south of Cape Hatteras and subsequently migrates onto the Northeast U.S.
 continental shelf. Fishery observations describe a spatial gradient of
 1-6 cm mantle length (ML) squid from waters south of Hatteras through
