--- a/docs/snapshot_template.qmd
+++ b/docs/snapshot_template.qmd
@@ -46,7 +46,6 @@ devtools::load_all(here::here("../READ-EDAB-NEesp2"))
 :::: {}
 
 :::{}
-\vspace{0.50cm}
 \raggedright
 \section{Key Findings from the Life History Working Group}
 
@@ -61,12 +60,12 @@ In 2024, most stage 4 squid caught in summer with very little mature squid caugh
 \vspace{0.25cm}
 
 \subsection{Migration and movement dynamics}
-Recent work hypothesizes the possibility of a winter cohort that hatches south of Cape Hatteras and subsequently migrates onto the Northeast U.S. continental shelf. Fishery observations describe a spatial gradient of 1-6 cm mantle length (ML) squid from waters south of Hatteras through southern New England, with the smallest squid detected further south. The Gulf Stream and warm core rings may facilitate the recruitment transport of juvenile squid (Richardson WP), but potential for inputs to the population from the South and offshore are difficult to quantify.
+In November/December, longfin migrate from the inshore shelf to deep, warmer slope waters along the shelf edge to overwinter. By May/June of the next year, they migrate back to shallow coastal waters from the MAB to southern New England to spawn (Macy and Brodziak 2001). Recent work hypothesizes the possibility of a winter cohort that hatches south of Cape Hatteras and migrates onto the Northeast shelf (Richardson WP). Fishery observations describe a spatial gradient of 1-6 cm mantle length (ML) squid from waters south of Hatteras through southern New England, with the smallest squid detected further south. The Gulf Stream and warm core rings may facilitate the recruitment transport of juvenile squid, but potential for inputs to the population from the South and offshore are difficult to quantify.
 
 \vspace{0.25cm}
 
 \subsection{Reproductive dynamics}
-Consideration of the hypothesis of a winter cohort spawning south of Hatteras indicates the presence of multiple cohorts of longfin squid, with some outside of the traditional Northeast shelf stock area, and provides evidence of year-round spawning in the stock.
+Spawning peaks inshore from late spring to early summer in the Mid-Atlantic and southern New England (Hatfield and Cadrin 2002; Macy and Brodziak 2001) with hatching in late summer (Jacobson 2005). Consideration of the hypothesis of a winter cohort  spawning south of Hatteras indicates the presence of multiple cohorts of longfin squid, with some outside of the traditional Northeast shelf stock area, and provides evidence of year-round spawning in the stock.
 
 \vspace{0.25cm}
 
@@ -74,10 +73,7 @@ Consideration of the hypothesis of a winter cohort spawning south of Hatteras in
 Although natural mortality is expected to be age-dependent, lack of accurate age data makes further study difficult. Using the equation derived by Hamel and Cope (2022), natural mortality for longfin squid can range from 0.36 (max. age = 15 mo.) to 0.675 (max. age = 8 mo.). Intraspecific predation impacts natural mortality, but there is no available data to quantify the amount of mortality this causes.
 :::
 
-\vspace{0.25cm}
-
 :::{}
-\vspace{0.50cm}
 ![](`r params$img1`)
 :::
 
