--- a/docs/snapshot_template.tex
+++ b/docs/snapshot_template.tex
@@ -84,6 +84,39 @@
 \makeatletter
 \def\fps@figure{htbp}
 \makeatother
+% definitions for citeproc citations
+\NewDocumentCommand\citeproctext{}{}
+\NewDocumentCommand\citeproc{mm}{%
+  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
+\makeatletter
+ % allow citations to break across lines
+ \let\@cite@ofmt\@firstofone
+ % avoid brackets around text for \cite:
+ \def\@biblabel#1{}
+ \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
+\makeatother
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newlength{\csllabelwidth}
+\setlength{\csllabelwidth}{3em}
+\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
+ {\begin{list}{}{%
+  \setlength{\itemindent}{0pt}
+  \setlength{\leftmargin}{0pt}
+  \setlength{\parsep}{0pt}
+  % turn on hanging indent if param 1 is 1
+  \ifodd #1
+   \setlength{\leftmargin}{\cslhangindent}
+   \setlength{\itemindent}{-1\cslhangindent}
+  \fi
+  % set entry spacing
+  \setlength{\itemsep}{#2\baselineskip}}}
+ {\end{list}}
+\usepackage{calc}
+\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
+\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 \usepackage[pages=some]{background}
 % \usepackage{blindtext}
@@ -231,27 +264,26 @@ stage 4 females and very few stage 1 males were caught.
 In November/December, longfin migrate from the inshore shelf to deep,
 warmer slope waters along the shelf edge to overwinter. By May/June of
 the next year, they migrate back to shallow coastal waters from the MAB
-to southern New England to spawn (Macy and Brodziak 2001). Recent work
-hypothesizes the possibility of a winter cohort that hatches south of
-Cape Hatteras and migrates onto the Northeast shelf (Richardson WP).
-Fishery observations describe a spatial gradient of 1-6 cm mantle length
-(ML) squid from waters south of Hatteras through southern New England,
-with the smallest squid detected further south. The Gulf Stream and warm
-core rings may facilitate the recruitment transport of juvenile squid,
-but potential for inputs to the population from the South and offshore
-are difficult to quantify.
+to southern New England to spawn {[}1{]}. Recent work hypothesizes the
+possibility of a winter cohort that hatches south of Cape Hatteras and
+migrates onto the Northeast shelf {[}2{]}. Fishery observations describe
+a spatial gradient of 1-6 cm mantle length (ML) squid from waters south
+of Hatteras through southern New England, with the smallest squid
+detected further south. The Gulf Stream and warm core rings may
+facilitate the recruitment transport of juvenile squid, but potential
+for inputs to the population from the South and offshore are difficult
+to quantify.
 
 \vspace{0.25cm}
 
 \subsection{Reproductive dynamics}
 
 Spawning peaks inshore from late spring to early summer in the
-Mid-Atlantic and southern New England (Hatfield and Cadrin 2002; Macy
-and Brodziak 2001) with hatching in late summer (Jacobson 2005).
-Consideration of the hypothesis of a winter cohort spawning south of
-Hatteras indicates the presence of multiple cohorts of longfin squid,
-with some outside of the traditional Northeast shelf stock area, and
-provides evidence of year-round spawning in the stock.
+Mid-Atlantic and southern New England {[}3{]} {[}1{]} with hatching in
+late summer {[}4{]}. Consideration of the hypothesis of a winter cohort
+spawning south of Hatteras indicates the presence of multiple cohorts of
+longfin squid, with some outside of the traditional Northeast shelf
+stock area, and provides evidence of year-round spawning in the stock.
 
 \vspace{0.25cm}
 
@@ -259,7 +291,7 @@ provides evidence of year-round spawning in the stock.
 
 Although natural mortality is expected to be age-dependent, lack of
 accurate age data makes further study difficult. Using the equation
-derived by Hamel and Cope (2022), natural mortality for longfin squid
+derived by Hamel and Cope {[}5{]}, natural mortality for longfin squid
 can range from 0.36 (max. age = 15 mo.) to 0.675 (max. age = 8 mo.).
 Intraspecific predation impacts natural mortality, but there is no
 available data to quantify the amount of mortality this causes.
@@ -285,10 +317,8 @@ available data to quantify the amount of mortality this causes.
 
 \raggedright
 
-The
-\href{https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/67d45b1680e8654ecaf1b98e/1741970199497/b_Draft+MAB_RiskAssess_2025.pdf}{2025
-Mid-Atlantic EAFM Risk Assessment Update} determined that there are
-moderate-high risks of :
+The 2025 Mid-Atlantic EAFM Risk Assessment Update {[}6{]} determined
+that there are moderate-high risks of :
 
 \begin{itemize}
 \tightlist
@@ -368,13 +398,13 @@ elements in 2025.
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ (\#\ \ of\ federally-permitted\ vessels\ landing\ over\ 1lb\ of\ longfin\ squid)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ has\ been\ steadily\ decreasing\ since\ around\ 2000\ consistent\ with\ decreasing\ fleet\ diversity\ and\ continued\ risk\ to\ fishery\ resilience\ (MAFMC\ FID).\ Permit\ requalification\ in\ 2019\ and\ a\ decrease\ in\ the\ incidental\ limit\ for\ trimester\ 2\ resulted\ in\ fishery\ closures\ in\ 2022\ and\ 2023,\ which\ may\ contribute\ to\ decreased\ participation.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ (\#\ \ of\ federally-permitted\ vessels\ landing\ over\ 1lb\ of\ longfin\ squid)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ has\ been\ steadily\ decreasing\ since\ around\ 2000\ consistent\ with\ decreasing\ fleet\ diversity\ and\ continued\ risk\ to\ fishery\ resilience\ [7].\ Permit\ requalification\ in\ 2019\ and\ a\ decrease\ in\ the\ incidental\ limit\ for\ trimester\ 2\ resulted\ in\ fishery\ closures\ in\ 2022\ and\ 2023,\ which\ may\ contribute\ to\ decreased\ participation.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ revenue\ (millions\ 2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Average\ Longfin\ ex-vessel\ prices\ in\ 2024\ increased\ slightly\ from\ 2023\ (+10\%),\ but\ commercial\ revenue\ has\ decreased\ from\ 2023\ which\ is\ most\ likely\ driven\ by\ a\ an\ overall\ decrease\ in\ landings\ by\ 23\%\ (MAFMC\ FID).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ revenue\ (millions\ 2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Average\ Longfin\ ex-vessel\ prices\ in\ 2024\ increased\ slightly\ from\ 2023\ (+10\%),\ but\ commercial\ revenue\ has\ decreased\ from\ 2023\ which\ is\ most\ likely\ driven\ by\ a\ an\ overall\ decrease\ in\ landings\ by\ 23\%\ [7].}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
@@ -410,8 +440,8 @@ elements in 2025.
 
 \begin{itemize}
 \item
-  Bottom temperature data comes from GLORYS, a modeled re-analysis
-  product that incorporates insitu data.
+  Bottom temperature data comes from GLORYS {[}7{]}, a modeled
+  re-analysis product that incorporates insitu data.
 \item
   The Gulf Stream Index indicator is a yearly value and may not be
   indicative of changes in oceanographic processes on a smaller time
@@ -447,6 +477,66 @@ information presented in this report.\newline
 
 The code used to create this report can be viewed online:
 \href{github.com/NEFSC/READ-EDAB/longfinESP}{github.com/NEFSC/READ-EDAB-longfinESP}
+
+\newpage
+\newgeometry{top=1in, left=1in, right=1in, bottom=1in}
+
+\section{References}\label{references}
+
+\phantomsection\label{refs}
+\begin{CSLReferences}{0}{0}
+\bibitem[\citeproctext]{ref-Macy_Brodziak_2001}
+\CSLLeftMargin{1. }%
+\CSLRightInline{W. Macy \& J. Brodziak, Seasonal maturity and size at
+age of (\emph{{Loligo} pealeii}) in waters of southern new england.
+\emph{ICES Journal of Marine Science}, \textbf{58} (2001) 852--864.
+https://doi.org/\href{https://doi.org/10.1006/jmsc.2001.1076}{10.1006/jmsc.2001.1076}.}
+
+\bibitem[\citeproctext]{ref-richardson_2026}
+\CSLLeftMargin{2. }%
+\CSLRightInline{D. Richardson, \emph{\href{}{A hypothesized life history
+of longfin squid (\emph{{Doryteuthis} pealeii}) on the east coast of the
+united states.}} (2026).}
+
+\bibitem[\citeproctext]{ref-Hatfield_Cadrin_2002}
+\CSLLeftMargin{3. }%
+\CSLRightInline{E. M. C. Hatfield \& S. X. Cadrin, Geographic and
+temporal patterns in size and maturity of the longfin inshore squid
+(\emph{{Loligo} pealeii}) off the northeastern united states.
+\emph{Fishery Bulletin}, \textbf{100} (2002) 200--213.}
+
+\bibitem[\citeproctext]{ref-jacobson_2005}
+\CSLLeftMargin{4. }%
+\CSLRightInline{L. D. Jacobson,
+\emph{\href{https://repository.library.noaa.gov/view/noaa/4035}{Essential
+fish habitat source document. Longfin inshore squid, (\emph{{Loligo}
+pealeii}), life history and habitat characteristics}} (2005).}
+
+\bibitem[\citeproctext]{ref-Hamel_Cope_2022}
+\CSLLeftMargin{5. }%
+\CSLRightInline{O. S. Hamel \& J. M. Cope, Development and
+considerations for application of a longevity-based prior for the
+natural mortality rate. \emph{Fisheries Research}, \textbf{256} (2022)
+106477.
+https://doi.org/\href{https://doi.org/10.1016/j.fishres.2022.106477}{10.1016/j.fishres.2022.106477}.}
+
+\bibitem[\citeproctext]{ref-mafmc_midatlantic_2025}
+\CSLLeftMargin{6. }%
+\CSLRightInline{MAFMC,
+\emph{\href{https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/67d45b1680e8654ecaf1b98e/1741970199497/b_Draft+MAB_RiskAssess_2025.pdf}{Mid-{Atlantic}
+{EAFM} risk assessment: 2025 update}} (2025).}
+
+\bibitem[\citeproctext]{ref-jeanmichel_copernicus_2021}
+\CSLLeftMargin{7. }%
+\CSLRightInline{L. Jean-Michel, G. Eric, B.-B. Romain, G. Gilles, M.
+Angélique, D. Marie, B. Clément, H. Mathieu, L. G. Olivier, R. Charly,
+C. Tony, T. Charles-Emmanuel, G. Florent, R. Giovanni, B. Mounir, D.
+Yann, \& L. T. Pierre-Yves, The {Copernicus} {Global} 1/12° {Oceanic}
+and {Sea} {Ice} {GLORYS12} {Reanalysis}. \emph{Frontiers in Earth
+Science}, \textbf{9} (2021) 698876.
+https://doi.org/\href{https://doi.org/10.3389/feart.2021.698876}{10.3389/feart.2021.698876}.}
+
+\end{CSLReferences}
 
 
 
