--- a/docs/references.bib
+++ b/docs/references.bib
@@ -64,7 +64,7 @@
 }
 
 @techreport{mafmc_longfin_2025,
-	title = {Longfin Squid (\textit{{Doryteuthis} pealeii}) Fishery Information Document Fishery Information Document},
+	title = {Longfin Squid (\textit{{Doryteuthis} pealeii}) Fishery Information Document},
 	url = {https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/6806b0eab3a3986a9561ef3c/1745268972731/Longfin-FID_2025-04.pdf},
 	author = {MAFMC},
 	year = {2025},
