--- a/docs/snapshot_template.tex
+++ b/docs/snapshot_template.tex
@@ -434,13 +434,18 @@ elements in 2025.
 
 \renewcommand*{\arraystretch}{1}
 
-\section{Data Gaps/Uncertainty}
+\vspace{-0.4cm}
+
+\centering\footnotesize * {[}7{]} = Longfin Squid Fishery Information
+Document \newline
+
+\normalsize\section{Data Gaps/Uncertainty}
 
 \raggedright
 
 \begin{itemize}
 \item
-  Bottom temperature data comes from GLORYS {[}7{]}, a modeled
+  Bottom temperature data comes from GLORYS {[}8{]}, a modeled
   re-analysis product that incorporates insitu data.
 \item
   The Gulf Stream Index indicator is a yearly value and may not be
@@ -465,7 +470,7 @@ elements in 2025.
   unknown at this time.
 \end{itemize}
 
-\vspace{1.0cm}
+\vspace{0.5cm}
 
 \centering\normalsize
 
@@ -526,8 +531,15 @@ https://doi.org/\href{https://doi.org/10.1016/j.fishres.2022.106477}{10.1016/j.f
 \emph{\href{https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/67d45b1680e8654ecaf1b98e/1741970199497/b_Draft+MAB_RiskAssess_2025.pdf}{Mid-{Atlantic}
 {EAFM} risk assessment: 2025 update}} (2025).}
 
-\bibitem[\citeproctext]{ref-jeanmichel_copernicus_2021}
+\bibitem[\citeproctext]{ref-mafmc_longfin_2025}
 \CSLLeftMargin{7. }%
+\CSLRightInline{MAFMC,
+\emph{\href{https://static1.squarespace.com/static/511cdc7fe4b00307a2628ac6/t/6806b0eab3a3986a9561ef3c/1745268972731/Longfin-FID_2025-04.pdf}{Longfin
+squid (\emph{{Doryteuthis} pealeii}) fishery information document}}
+(2025).}
+
+\bibitem[\citeproctext]{ref-jeanmichel_copernicus_2021}
+\CSLLeftMargin{8. }%
 \CSLRightInline{L. Jean-Michel, G. Eric, B.-B. Romain, G. Gilles, M.
 Angélique, D. Marie, B. Clément, H. Mathieu, L. G. Olivier, R. Charly,
 C. Tony, T. Charles-Emmanuel, G. Florent, R. Giovanni, B. Mounir, D.
